--- a/code/style.css
+++ b/code/style.css
@@ -1,16 +1,18 @@
 html {
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 body {
   margin: 0;
   padding: 1rem;
+  width: 100%;
 }
 
 .wrapper {
   margin: 0 auto;
   background-color: antiquewhite;
-  height: 900px;
+  width: 100%;
 }
 
 header {
@@ -21,6 +23,11 @@ header {
   border-bottom: darkslategrey 1px solid;
 }
 
+/*Lägger in den här lite tillfälligt bara för att se fonten*/
+header h1 {
+  font-family: 'Balsamiq Sans', cursive;
+}
+
 nav {
   /* The nav is not displayed in mobile devices*/
   display: none;
@@ -29,6 +36,8 @@ nav {
 /* This is not visible in mobiles */
 nav a {
   padding: 1rem;
+  text-decoration: none;
+  color: black;
 }
 
 /* Det här behöver ändras sen */
@@ -37,7 +46,7 @@ nav a {
   height: 4rem;
   border-radius: 50%;
   margin-right: 1rem;;
-  background-color: blue;
+  background-color: lightgreen;
   color: white;
   display: grid;
   place-items: center;
@@ -47,12 +56,9 @@ nav a {
 
 .big-news {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
-}
-
-.big-news .image-container {
-  padding: 2.5rem;
+  grid-template-rows: 1fr 1fr;
+  gap: 0;
+  background-color: #ccccff;
 }
 
 .big-news-child {
@@ -61,6 +67,26 @@ nav a {
 }
 
 .big-news img {
+  max-width: 100%;
+}
+
+/*Other news content start here */
+
+.other-news {
+  margin-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+}
+
+/*Ändra kanske lite här*/
+.card {
+  display: grid;
+  grid-template-rows: max-content 200px 1fr;
+  padding: 1rem;
+  border: 1px solid black;
+}
+
+.card img {
   max-width: 100%;
 }
 
@@ -78,7 +104,22 @@ nav a {
   .logo {
     margin-left: 1rem;
   }
+
+  .big-news {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 1rem;
+  }
+
+  .other-news {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2.5rem;
+  }
+  
 }
+
 
 /* Tablet media queries */
 
@@ -89,9 +130,21 @@ nav a {
   
   nav {
     display: block;
+    /*Denna ändrar ordningen så att nav kommer före länkarna i header flex-boxen*/
+    order: -1;
   }
 
   header {
     justify-content: space-between;
+  }
+
+  header h1 {
+    display: none;
+  }
+
+  .big-news {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
   }
 }
