--- a/code/style.css
+++ b/code/style.css
@@ -14,10 +14,7 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
   }
-  img {
-    width: 40%;
-    height: 40%;
-  }
+
   .container-article {
     display: flex;
     justify-content: center;
@@ -32,10 +29,7 @@ body {
   body {
     flex-direction: row;
   }
-  img {
-    width: 40%;
-    height: 40%;
-  }
+
   .container-article {
     display: flex;
     justify-content: center;
@@ -43,12 +37,6 @@ body {
   }
 } 
 /*end*/
-
-img {
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-}
 
 header {
   width: auto;
@@ -75,8 +63,16 @@ header {
   border: orange 1px solid;
   background-color: lightgray;
   margin: 1rem;
-
+  display: flex;
 }
+.headline-image {
+  width: 40%;
+}
+
+.headline-text {
+  width: 60%;
+}
+
 .article {
   border: orange 1px solid;
   background-color: lightgray;
