testing more articles

--- a/code/style.css
+++ b/code/style.css
@@ -232,6 +232,24 @@ article {
   background-color: #302e87;
 }
 
+/* .article-5 {
+  background-color: #084455;
+}
+
+.article-6 {
+  background-color: #ff8f92;
+}
+
+.article-7 {
+  background-color: #1199ad;
+}
+
+.article-8 {
+  background-color: #9e7afa;
+} */
+
+
+
 /* Articles Hover Behaviour */
 article:hover {
   max-height: 500vh;
@@ -285,7 +303,7 @@ article:hover {
 
   .main-image {
     object-fit: cover;
-    max-height: 60vw;
+    max-height: 90vw;
     max-width: 40vw;
     object-position: 10% 90%;
   }
