added header,logo and big news img

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,40 @@
 html {
-  background: #0025ff;
+  background: lightblue;
   color: #fff;
 }
+
+body {
+  margin: 0;
+}
+
+h1 {
+  color: #0b0b17;
+}
+
+ header {
+   height: 100px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-img {
+  width: 150px;
+}
+
+.big-news {
+  display: flex;
+  width: 400px;
+  
+}
+
+.hot-air-balloons {
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+
+
+
