--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,142 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: rgb(204, 204, 204);
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+}
+body{
+  margin: 0px;
+  font-family: 'Raleway', sans-serif;
+}
+
+.flex-container {
+  height:75px;
+  background-color:darkgrey;
+  color:black;
+  font-size: 25px;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  
+
+}
+
+.flex-container-item{
+  display:flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.logo{
+  height:150px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  
+  
+}
+
+li {
+  display: inline;
+  
+}
+
+a{
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: bold;
+  padding:15px;
+  color:black;
+}
+
+a:hover {
+  opacity: 0.5;
+}
+
+.big-news{
+  display:flex;
+  background-color: rgb(204, 204, 204);
+  height:450px;
+  align-items: center;
+  justify-content: center;
+  padding:0px;
+}
+
+
+.big_article{
+  display:flex;
+  height:400px;
+  width:1200px;
+  background-color: white;
+  justify-content: left;
+  align-items: flex-start;
+  border-radius: 20px;
+  
+  
+}
+
+.text{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-right: 10px;
+  
+  }
+
+  .h1{
+    font-size: 50px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    }
+
+    .h2{
+      font-size: 25px;
+    }
+
+    .h2_{
+      font-size: 25px;
+      margin-left: 10px;
+      margin-top: 10px;
+    }
+
+  .h3{
+    font-size: 25px;
+    font-weight: bolder;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+  }
+
+.big_photo {
+  border-radius: 20px;
+  height:400px;
+  width:auto;  
+ 
+  
+}
+
+.articles{
+  display:flex;
+  flex-direction: row;
+  margin:15px;
+  background-color: rgb(204, 204, 204);
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+}
+
+.content{
+  height:500px;
+  width:400px;
+  background-color: white;
+  border-radius: 20px;
+ 
+}
+
+.article_photo{
+  height:auto;
+  width:400px;
+  border-radius: 20px;
 }
