--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,73 @@
-html {
-  background: #0025ff;
+html 
+  /*Ska det stå något för denna*/
+
+body {
+  background: #82df91;
   color: #fff;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* styling of header */
+header {
+  width: 100%;
+  height: 120px;
+  background-color: rgba(17, 99, 71, 0.467);
+}
+
+.logo {
+  width: 50px;
+  border: 1px solid white;
+  padding: 3px;
+  margin: 20px;
+}
+
+h1 {
+  color: #fff;
+  display: inline;
+}
+
+.navbar {
+  display: inline-block;
+  /*hur flyttar jag hela denna till höger*/
+}
+
+.navbar li {
+  list-style: none;
+  display: inline-block;
+  padding: 10px;
+}
+
+.navbar a {
+  text-decoration: none;
+}
+
+/* Main news */
+.main-image {
+  width: 600px;;
+  height: 400px;
+  border: 3px solid black;
+  margin: 15px;
+}
+
+.main-text {
+  margin: 10px;
+
+}
+
+/* Other news*/
+.other-news img {
+  width: 400px;
+  height: 300px;
+  margin: 20px;
+}
+
+
+
+/*Footer*/
+footer {
+  background: black;
+  width: 100%;
+  height: 70px;
 }
