--- a/code/style.css
+++ b/code/style.css
@@ -15,7 +15,7 @@ body{
   width:100%;
   height:500px;
   flex-wrap: wrap;
-
+  
 }
 
 .nav-bar{
@@ -29,18 +29,19 @@ body{
 
 .nav-bar img{
   height: 100px;
-  width:100px;
+  width:60px;
   opacity: 60%;
   padding-bottom: 20px;
 }
 
 .nav-bar h1{
-  height: 100px;
+  height: 80px;
  margin: 10px;
   opacity: 70%;
-  align-items: center;
   color: antiquewhite;
  font-size: 30px;
+ font-family: 'The Nautigal', cursive;
+padding-top: 10px;
 }
 
 .media-icons{
@@ -122,13 +123,14 @@ body{
   
   }
   .nav-bar h1{
-    margin: auto 0;
-    padding: 0 20px;
+   
+    padding: 0 10px;
     letter-spacing: 1px;
   font-family: "The Nautigal", cursive;
   font-size: 40px;
   justify-content: space-around;
-  height: 40px;
+  height: 45px;
+  font-weight: bold;
   }
   
   
