--- a/code/style.css
+++ b/code/style.css
@@ -60,7 +60,6 @@ button {
   padding: 12px 25px;
   border-radius: 10px;
   cursor: pointer;
-  align-self: flex-end;
 }
 
 .big-news--button {
@@ -192,8 +191,9 @@ button:focus {
   background: #E7DCCB;
   border-top: 1px solid #E07A5F;
   padding: 1.5em;
+  display: flex;
+  flex-direction: column;
 }
-
 
 .news-feed--card {
   background: #F4F1DE;
@@ -219,6 +219,10 @@ button:focus {
   min-width: 100%;
   max-height: 9em;
   border-radius: 15px;
+}
+
+.news-feed h2 {
+  text-align: center;
 }
 
 
@@ -257,13 +261,20 @@ footer {
     display: flex;
     justify-content: center;
   }
-  
+
+  .news-feed h2 {
+    text-align: left;
+  }
+
   .news-feed {
+    margin-inline: 2em;
+  }
+
+  .news-feed--cards {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    grid-gap: 2.5em;
+    gap: 2.5em;
   }
   
   .big-news {
@@ -277,7 +288,7 @@ footer {
     padding: 2em;
     max-height: 80vh;
     flex-direction: row;
-    grid-gap: 1.5em;
+    gap: 1.5em;
   }
   
   .big-news--img {
