--- a/code/style.css
+++ b/code/style.css
@@ -3,7 +3,7 @@ body{
   padding:0px;
   font-family: sans-serif;
   box-sizing: border-box;
-
+  
 
 }
 
@@ -13,8 +13,8 @@ body{
   display:flex;
   flex-direction: row;
   width:100%;
-  height:500px;
-  flex-wrap: wrap;
+  height:100px;
+
   
 }
 
@@ -22,31 +22,35 @@ body{
   background-color: rgb(0, 0, 0);
   padding: 10px;
   height:100px;
-  display: flex;
-  flex-wrap: wrap;
   line-height: 1rem;
+  display: flex;
+}
+.nav-bar img{
+  height: 80px;
+  width:80px;
+  opacity: 70%;
+  
 }
 
-.nav-bar img{
-  height: 100px;
-  width:60px;
-  opacity: 60%;
-  padding-bottom: 20px;
-}
 
 .nav-bar h1{
-  height: 80px;
- margin: 10px;
-  opacity: 70%;
   color: antiquewhite;
- font-size: 30px;
- font-family: 'The Nautigal', cursive;
-padding-top: 10px;
+ font-size: 20px;
+ font-family: 'The Nautigal';
+height: 50px;
+ margin: 30px 10px;
+opacity: 60%;
+ 
+  
 }
 
 .media-icons{
+  background-color: black;
   color:rgba(250, 235, 215, 0.438);
- margin: 20px;
+  width: 100%;
+  padding: 0 5px;
+  letter-spacing: 3px;
+  
 }
 
 .navbar-nav li a {
@@ -67,28 +71,24 @@ padding-top: 10px;
   height:80px;
 }
 
-@media (min-width:1024px){
+@media  screen and (min-width:768px){
   header{
-    background-color: rgb(0, 0, 0);
-    color: white;
+    
+    background-color: black;
     display:flex;
     flex-direction: column;
-    width:100%
+    width:100%;
   }
   
   
   .nav-bar{
-    background-color: rgb(0, 0, 0);
-    padding: 10px;
-    height:100px;
-    display: flex;
+    background-color: black;
+    height:50px;  
     flex-wrap: wrap;
-    line-height: 1rem;
-    
   }
   
   .nav-bar img{
-    height: 100px;
+    height: 110px;
     width:90px;
     opacity: 60%;
     padding-bottom: 20px;
@@ -99,7 +99,7 @@ padding-top: 10px;
     text-align: right;
     letter-spacing: 5px;
     flex-grow: 1;
-   padding:20px;
+    flex-wrap: wrap;
    cursor: pointer;
    font-size: 20px;
    color: rgba(250, 235, 215, 0.705);
@@ -126,22 +126,16 @@ padding-top: 10px;
    
     padding: 0 10px;
     letter-spacing: 1px;
-  font-family: "The Nautigal", cursive;
+  font-family: "The Nautigal";
   font-size: 40px;
   justify-content: space-around;
-  height: 45px;
+
   font-weight: bold;
   }
   
   
   
-  .navbar{
-    background-color: rgba(214, 194, 194, 0.712);
-    height:70px;
-    
-    
   
-   } 
    
    .navbar-nav li a:hover {
      color:antiquewhite;
@@ -151,23 +145,26 @@ padding-top: 10px;
   
    .navbar-nav li a {
     color:rgba(250, 235, 215, 0.842);
-    font-size: 20px;
+    font-size: 15px;
     cursor: pointer;
     text-decoration: none;
     font-weight: bold;
     font-family: 'The Nautigal', cursive;
-    margin: 20px 10px;
+    
     letter-spacing: 1px ;
-   display: block;
-   }
-  .nav-link{
-  margin:10px;
+    display: block;
+    padding: 50px 0 0 0;
   }
+  
    
    
    .highlights{
-     display:flex;
-     height:80px;
+    display:flex;
+     height:50px;
+     background-color: blanchedalmond;
+     color: black;
+     font-weight: bolder;
+     margin:10px;
    }
    .highlights1{
      width: 400px;
@@ -176,8 +173,8 @@ padding-top: 10px;
     font-family: 'Lucida Sans';
     font-family: 'The Nautigal', cursive;
     text-transform: Uppercase;
-    color: rgba(250, 235, 215, 0.842);
-    padding: 20px;
+    
+    padding: 10px;
     
   }
    
@@ -188,12 +185,6 @@ padding-top: 10px;
     font-family: 'The Nautigal', cursive;
     padding: 20px;
     
-  }
-  
-  
-  
-  
-  
-  
+  }  
 }
 
