--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,3 @@
-html {
-  background: red;
-  color: #fff;
-}
+header{display:flex; justify-content:space-between; align-items:center; font-family: 'Courier New', Courier, monospace; font-size: 20px;}
+img{height: 40px;}
+a{text-decoration: none; color:black; padding: 0 20px;}
