--- a/code/style.css
+++ b/code/style.css
@@ -1,38 +1,60 @@
-html {
-  background: lightblue;
+/*html {
+  background: #ffc62c;
   color: #fff;
-}
+} */
 
 body {
   margin: 0;
 }
 
-h1 {
-  color: #0b0b17;
-}
-
- header {
-   height: 100px;
-  background-color: #ffffff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+header {
+    width: 667px;
+    height: 100px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
 }
 
 .logo-img {
-  width: 150px;
+  width: 100px;
 }
 
-.big-news {
-  display: flex;
-  width: 400px;
-  
+.topnav {
+  background-color: #ffff;
+  overflow: hidden;
 }
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 5px 16px;
+  text-decoration: none;
+  font-size: 17px;
+
+.article {
+display: flex;
+
+}
+
+/*.big-news {
+  display: flex;
+}*/
 
 .hot-air-balloons {
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+
+h1 {
+  position: absolute;  
+  left: 50%;                        /* horizontal alignment */
+  top: 50%;                         /* vertical alignment */
+  transform: translate(-50%, -50%); /* precise centering */
 }
 
 
