--- a/code/style.css
+++ b/code/style.css
@@ -1,9 +1,18 @@
 @media (max-width: 668px) {
-  .big-news-container {
+
+  header {
+    flex-wrap: wrap;
     flex-direction: column;
+    /* justify-content: center; */
+  }
+  .big-news-container {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
   }
   .small-news-container{
     flex-direction: column;
+    justify-content: relative;
     
   }
 }
@@ -14,7 +23,8 @@
 
 }
 
-/* here starts all other css, only media quiries above */
+/* ---------here starts all other css, only media quiries above--------*/
+
 
 html {
   background: #74a89d;
@@ -25,11 +35,15 @@ header {
   display:flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  border: 1px dotted brown;
+  border-radius: 30%;
+  /* border: 1px dotted brown; */
+  background-color: salmon;
   width: 1200px;
-  margin: 20px;
+  margin: 60px;
   padding: 20px;
   font-family: 'Righteous', cursive;
+  overflow:hidden;
+
 }
 
 h1 {
@@ -55,6 +69,7 @@ h1 {
   height: 100px;
   width: 100px;
   text-align: center;
+  align-self: center;
   
 }
 
@@ -87,47 +102,74 @@ a:hover {
   color: #6acdf5;
 } */
 
+
 .big-news-container{
   display:flex;
-  border: 2px solid black;
-  margin:40px;
-  padding: 40px;
-  height: 150px;
+  border: 10px solid black;
+  background-color: rgb(32, 37, 39);
+  margin:60px 60px 0 60px;
+  padding: 10px;
+  height: 300px;
   width: 1200px;
   flex-wrap; nowrap;
-  justify-content: space-around;
+  /* justify-content: column; */
   font-family: 'Righteous';
+  justify-content: center;
+  /* object-fit: cover; */
+  
 
 }
 
 .big-image {
-  border:2px solid black;
-  width: 200px;
-  margin: 20px;
+  /* border:2px solid black; */
+  /* width: 400px; */
+  /* height: 300px; */
+  /* size: 50%; */
+  margin: 0;
+  border-radius: 10%;
+  /* margin-left: auto; */
 
 }
+
 .title-text {
+  display: inline;
   /* text-align: center; */
-  border:1px solid black;
-  /* margin: 20px; */
-  /* padding: 30px; */
+  /* border:1px solid black; */
+  /* padding: 0 50px 0 50px; */
+  background-color: rgb(32, 37, 39);
+  font-family: 'Abril Fatface', cursive;
+
+
+}
+
+h3 {
   font-size: 100px;
-  /* flex-flow: wrap; */
-  /*position: absolute;*/
+  margin-top 0;
+  margin-bottom: 0;
+
+}
+
+h4 {
+  font-size: 140px;
+  margin-top: 0;
+
 }
 
 .small-news-container {
   display: flex;
-  border: 1px solid white;
-  margin: 40px;
-  padding: 40px;
-  height: 300px;
+  border: 10px solid sienna;
+  background-color: sienna;
+  margin: 0 60px 60px 60px;
+  padding: 10px;
+  /* height: 1200px; */
   width: 1200px;
-  /* justify-content: center; */
-  /* flex-direction: wrap;
-  justify-content: space-evenly; */
-  justify-content: center;
-  flex-direction: wrap;
+  justify-content: space-around;
+  text-align: justify;
+  flex-wrap: wrap;
+  object-fit: cover;
+  
+
+ 
   
 
 
@@ -136,28 +178,38 @@ a:hover {
 .news1, .news2, .news3 {
   display: flex;
   border: 1px solid black;
-  padding: 30px;
-  margin: 30px;
+  padding: 0;
+  margin: 0;
   height: 250px;
-  width: 700px;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-basis: 100px;
-  
-}
-
-.small-img{
   width: 300px;
-}
+  justify-content: center;
+  position: relative;
+  flex-wrap: wrap;
+  }
 
 
 
 .news4, .news5, .news6 {
+  display: flex;
   border: 1px solid black;
-  padding: 30px;
-  margin: 30px;
+  padding: 0;
+  margin: 40px 0 0 0;
   height: 250px;
-  width: 700px;
+  width: 300px;
+  justify-content: center;
+  position:  relative;
+  flex-wrap: wrap;
+}
 
+.small-img{
+  width: 300px;
+  border-radius: 10%;
+ 
 
+.small-title {
+  position: absolute;
+
+  
+  
+  
 }
