--- a/code/style.css
+++ b/code/style.css
@@ -10,7 +10,6 @@ body {
   min-height: 100vh;
   max-width: 100vw;
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 20px;
 }
 
 
@@ -40,6 +39,7 @@ h3 {
 }
 
 p {
+  font-size: 1.125rem;
   line-height: 1.7em;
 }
 
@@ -54,7 +54,6 @@ p {
 button {
   font-family: 'Be Vietnam Pro', sans-serif;
   background: #BCA787;
-  color: #222222;
   font-size: 1em;
   box-shadow: 2px 3px #444444;
   padding: 12px 25px;
@@ -180,11 +179,14 @@ button:focus {
 
 .big-news {
   padding: 1.75em;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  max-width: 90%;
-  cursor: pointer;
+}
+
+.big-news--img {
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .news-feed {
