--- a/code/style.css
+++ b/code/style.css
@@ -1,3 +1,4 @@
 header{display:flex; justify-content:space-between; align-items:center; font-family: 'Courier New', Courier, monospace; font-size: 20px;}
 img{height: 40px;}
 a{text-decoration: none; color:black; padding: 0 20px;}
+body{background-color: blue;}
