--- a/code/style.css
+++ b/code/style.css
@@ -1,15 +1,11 @@
 
-
 body {
   background: linear-gradient(to bottom right, #F6EABE, 
   #FDA65D, #FFA810);
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  
+  font-weight: 400; 
+  /*padding: 10px;*/
 }
-
-/*  background: linear-gradient(to bottom right, #F8E2CF, 
-  #fffefe); */
 
 header {
   padding: 5px;
@@ -22,14 +18,7 @@ header {
       rgba(255, 255, 255, 0.7),
       rgba(255, 255, 255, 0.3)
     ); /*  #94b190 d88c8c*/
-    box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
-
-}
-
-a:visited, a:link {
-  color: black;
-  text-decoration: none;
-  
+  box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
 }
 
 header img {
@@ -39,41 +28,34 @@ header img {
   align-self: center
 }
 
-.meny {
-  justify-self: center;
-  align-self: center;
-  grid-column-start: 3;
-  display: inline;
-  
-}
-
 nav {
  display: flex;
  font-family: 'Comfortaa', cursive;
 }
 
-
-
 nav a {
   display: none;
 }
 
+nav a:hover {
+  background-color: #FDA65D;
+  border-radius: 50px;
+  box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
+  animation-name: colorChange;
+  animation-duration: 5s; 
+}
 
 p {
   line-height: 30px;
-  margin: 20px;
-  
+  margin: 20px; 
 }
 
-.container {
-  padding: 10px;
-  margin: 20px 0;
-  /*border: 1px solid black;*/
- 
+a:visited, a:link {
+  color: black;
+  text-decoration: none;
 }
 
-/* background: linear-gradient(to bottom right, #fffefe, 
-  #A4B190); */
+/* BIG-NEWS */
 .bigNews {
  padding: 5px;
  margin: 0 -18px 0 -18px;
@@ -90,128 +72,29 @@ p {
   box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
 }
 
-/* Mobile */
-@media (max-width:667px) {
-  .bigNews {
-      justify-content: center;
-      flex-wrap: wrap;
-  }
-
-  .part1 img {
-  width: 100%;
-  }
-  .cards {
-      display: grid;
-      grid-template-columns: repeat(1, 1fr);
-      grid-column: span 1;
-  }
-
-  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
-    font-size: 14px;
-    line-height: 20px;
-    
-  }
-  
+.bigNews:hover {
+  animation-name: colorChange;
+  animation-duration: 5s;
 }
-
-/* Tablet */
-@media (min-width:668px) {
-  header {
-      grid-template-columns: repeat(5, 1fr);
-      
-  }
-
-  nav {
-      grid-column: 2 / 6;
-      justify-content: space-around;
-      align-self: center;
-  }
-
-  nav a {
-      display: inline;
-      
-      
-  }
-
-  header img {
-      grid-column-start: 1;
-  }
-
-  .meny {
-      display: none;
-  }
-  
-  .bigNews {
-      justify-content: center;
-      flex-wrap: wrap;
-  }
-  .cards {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-  }
-
-  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
-    line-height: 25px;
-    
-  }
-
-  }
-  
-
-
-/* Desktop */
-@media (min-width:1024px) {
-  .bigNews {
-      flex-wrap: nowrap;
-  }
-  .cards {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-
-  }
-
-  nav a:hover {
-      background-color: #FDA65D;
-      border-radius: 50px;
-      box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
-    }
-}
-
-
 
 .part1, .part2 {
-  /*border: 1px solid blue;*/
   padding: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
- 
- 
 }
 
-
-
 .part1 img {
- border-radius: 2px;
+ border-radius: 5px;
  margin-left: 10px;
 }
 
-.part2 .bevakning{
-  align-self: flex-end;
-  margin: 0 10px 10px 0;
-}
 
-
+/* SMALL CARDS/ARTICLES */
 .cards {
-  /*border: 1px solid yellow;*/
-  
   margin: 40px 15px;
-
-
-  -webkit-backdrop-filter: blur(100px);
   backdrop-filter: blur(10px);
-  
 }
 
 .card1, .card2, .card3, .card4, .card5, .card6, .card7, .card8 {
@@ -220,11 +103,10 @@ p {
   to right bottom,
   rgba(255, 255, 255, 0.7),
   rgba(255, 255, 255, 0.3)
-);
+  );
   margin: 15px;
   border-radius: 20px 20px 0 20px;
   box-shadow: 6px 6px 20px rgba(122,122,122,0.212);
-  
   -webkit-backdrop-filter: blur();
   backdrop-filter: blur(100px);
   display: flex;
@@ -239,7 +121,7 @@ p {
 }
 
 .card1 p, .card2 p, .card3 p, .card4 p, .card5 p, .card6 p, .card7 p, .card8 p {
-  display:none;
+  display:none; 
 }
 
 .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
@@ -249,15 +131,148 @@ p {
   align-items: center;
   text-align: center;
   flex-direction: column;
-  
 }
 
 .card1:hover img, .card2:hover img, .card3:hover img, .card4:hover img, .card5:hover img, .card6:hover img, .card7:hover img, .card8:hover img {
   opacity: 0.2;
+  transition: all ease-in-out 0.4s;
+}
+
+/* Navbar in mobile format */
+button {
+  background: none;
+  color: black;
+  border: none;
+  text-decoration: none;
+  cursor: pointer;
+ }  
+
+.meny {
+  justify-self: center;
+  align-self: center;
+  grid-column-start: 3;
+  display: inline;
   
 }
 
+.meny ul {
+  position: fixed;
+  background: linear-gradient(to bottom right, #F6EABE, 
+     #FDA65D, #FFA810);
+  width: 100%;
+  height: 100vh;
+  bottom: -104px;
+  right: 100%;
+  border-radius: 10px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.5s ease;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;   
+}
 
+.meny li:hover, .meny li:focus {
+  font-weight: 600;
+  border-radius: 5px;  
+  background-color: white;
+  width: 100%;
+  animation-name: colorChange2;
+  animation-duration: 5s;
+  
+}
+
+.meny button:focus + ul {
+  opacity: 1;
+  pointer-events: auto;
+  right: 0;
+}
+
+li {
+  padding: 50px 0;
+  list-style: none;
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+/* MOBILE */
+@media (max-width:667px) {
+  .bigNews {
+      justify-content: center;
+      flex-wrap: wrap;
+  }
+
+  .part1 img {
+  width: 100%;
+  }
+
+  .cards {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-column: span 1;
+  }
+
+  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+    font-size: 14px;
+    line-height: 20px; 
+  }
+}
+
+/* TABLET */
+@media (min-width:668px) {
+  header {
+      grid-template-columns: repeat(5, 1fr);   
+  }
+
+  nav {
+      grid-column: 2 / 6;
+      justify-content: space-around;
+      align-self: center;
+  }
+
+  nav a {
+      display: inline;   
+  }
+
+  header img {
+      grid-column-start: 1;
+  }
+
+  .meny {
+      display: none;
+  }
+
+  .bigNews {
+      justify-content: center;
+      flex-wrap: wrap;
+  }
+
+  .cards {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+  }
+
+  .card1:hover p, .card2:hover p, .card3:hover p, .card4:hover p, .card5:hover p, .card6:hover p, .card7:hover p, .card8:hover p {
+    line-height: 25px;
+    }
+  }
+  
+
+
+/* DESKTOP */
+@media (min-width:1024px) {
+  .bigNews {
+      flex-wrap: nowrap;
+  }
+  .cards {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+/*FOOTER*/
 footer {
   display: flex;
   justify-content: center;
@@ -266,6 +281,7 @@ footer {
 
 footer img {
   margin: 10px;
+  
 }
 
 footer a:first-child:hover {
@@ -284,49 +300,18 @@ footer a:nth-child(4):hover {
   filter: invert(99%) sepia(0%) saturate(1623%) hue-rotate(201deg) brightness(117%) contrast(100%);
 }
 
+/* ANIMATION */
 
-    button {
-      background: none;
-      color: black;
-      border: none;
-      text-decoration: none;
-      cursor: pointer;
-    }
-
-    .meny ul {
-      position: absolute;
-      background: linear-gradient(
-      to right bottom,
-      rgba(255, 255, 255, 0.7),
-      rgba(255, 255, 255, 0.3) );
-      border: 1px solid black;
-      width: 120px;
-      height: 120px;
-      display: grid;
-      gap: 10px;
-      padding: 10px;
-      list-style: inside;
-      border-radius: 10px;
-      opacity: 0;
-      pointer-events: none;
-      transition: all 0.5s ease;
-      z-index: 1;
+@keyframes colorChange {
+  0%   {background-color: #F6EABE;}
+  25%  {background-color: #FDA65D;}
+  50%  {background-color: #FFA810;}
+  100% {background-color: #FDA65D;} 
 }
 
-.meny li:hover, .meny li:focus {
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;  
+@keyframes colorChange2 {
+  0%   {background-color: #F6EABE;}
+  25%  {background-color: #FDA65D;}
+  50%  {background-color: #FFA810;}
+  100% {background-color: #fff;} 
 }
-
-
-.meny button:focus + ul {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-
-
-
